8.0.5 (01-10-2021)
- Bug Fix: Align headers in debit and credit entries in debts report

8.0.4 (29-09-2021)
- Improvement: Commented line of emailForSendingEmails on DebtReportEntryBean.fillStudentInformation, because performance issues

8.0.3 (22-09-2021)
- Bug Fix: Only write ingressionType if it is set in the registration

8.0.2 (17-09-2021)
- Improvement: Add date to key of description of custom calculator in Tuition payment plan 

8.0.1 (08-09-2021)
- Improvement: In standalone and extracurricular tuitions, save the custom calculation description in debit entry instead of academic treasury event
- Bug Fix: In Treasury Bridge API, if there is not finantial entity associated to a degree return null as debt account

8.0.0 (02-09-2021)
- Improvement: Close debit notes academic debt generation rule allow close of interests (#UL-IGOT-1129)
- Improvement: Add document observations & terms and conditions to be exported in debt report beans
- Bug Fix: Error on copy of plans, invisible fields not are deleted
- Bug Fix: Reverted deletion of  PaymentPenaltySettings and PaymentPenaltyEventTarget (#UL-ISEG-1757)
- Refactor: Refactor academic domain to dependent platform services
- Refactor: Move Bennu specific service implementations to fenixedu-academic-treasury-ui
- Refactor: Remove excludesIfMatches property, which is not used
- Refactor: Use academic treasury dependent platform services to translate statute type description

7.3.2 (19-08-2021)
- Improvement: Move the custom calculation description from academic treasury event to debit entry, for standalone and extracurricular enrolments

7.3.1 (19-08-2021)
- Refactor: Allow specification of different product for standalone/extacurricular payment plans
- Bug Fix: Invoice tuition calculation for standalone and extracurricular, passing the Enrolment

7.3.0 (21-06-2021)